# bq-runner

./: Cargo.toml  README.md  SPIKE_REPORT.md  config.toml  hello.txt  review_cycle.py  rust-toolchain.toml
.github/workflows/: build-binaries.yml
benches/: arrow_ipc.rs  converters.rs  dependency_extraction.rs  parquet_loading.rs  pipeline_execution.rs  session_management.rs  sql_validation.rs
clients/clojure/bq-runner-client/: .lein-repl-history  project.clj
clients/clojure/bq-runner-client/src/bq_runner/: arrow.clj  client.clj  protocol.clj  websocket.clj
clients/clojure/bq-runner-client/test/bq_runner/: arrow_test.clj  client_test.clj
crates/bq-runner-macros/: Cargo.toml
crates/bq-runner-macros/src/: lib.rs
src/: config.rs  dag_loader.rs  error.rs  lib.rs  loader.rs  metrics.rs  utils.rs  validation.rs
src/converters/: mod.rs
src/domain/: mod.rs
src/executor/: arrow_ipc.rs  bigquery.rs  mod.rs  sql_builder.rs  test_counting.rs  yachtsql.rs
src/executor/converters/: arrow.rs  json.rs  mod.rs  yacht.rs
src/loader/: mod.rs
src/rpc/: handler.rs  methods.rs  types.rs
src/rpc/types/: core.rs  dag.rs  mod.rs  query.rs  session.rs  table.rs
src/session/: lifecycle.rs  loader.rs  manager.rs  mod.rs
src/session/pipeline/: dependency.rs  execution.rs  mod.rs  tests.rs  types.rs
tests/: arrow_ipc_tests.rs  integration_tests.rs
