[package]
name = "bq-runner"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "BigQuery SQL runner with mock and production backends"
repository = "https://github.com/alexchoi0/bq-runner"
keywords = ["bigquery", "sql", "database", "testing"]
categories = ["database", "development-tools::testing"]

[dependencies]
tokio = { version = "1", features = ["full", "sync"] }
axum = { version = "0.7", features = ["ws"] }
yachtsql = { git = "https://github.com/alexchoi-personal/yachtSQL", branch = "v0.1.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
toml = "0.8"
sqlparser = "0.52"
libc = "0.2"
parking_lot = "0.12"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
google-cloud-bigquery = "0.15"
google-cloud-auth = "1.3"
parquet = "54"
async-trait = "0.1"
arrow = "54"
glob = "0.3"
tokio-tungstenite = "0.24"
regex = "1"

[[bin]]
name = "bq-runner-server"
path = "src/bin/server.rs"

[[bin]]
name = "bq-runner-client"
path = "src/bin/client.rs"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6.5"
